<resources>
    <string name="app_name">辽宁中医</string>
    <string name="android">Android</string>
	<string name="iphone">iPhone</string>
	<string name="ipad">iPad</string>
	<string name="day">日</string>
	<string name="week">周</string>
	<string name="month">月</string>
	<string name="all">全部</string>
    <string name="tab_txt_0">首页</string>
    <string name="tab_txt_1">专家出诊表</string>
    <string name="tab_txt_2">在线咨询</string>
    <string name="tab_txt_3">我的中心</string>
    <string name="entrance_0">预约挂号</string>
    <string name="entrance_1">当日预约</string>
    <string name="entrance_2">查看报告</string>
    <string name="entrance_3">医院简介</string>
    <string name="entrance_4">候诊提醒</string>
    <string name="entrance_5">预约服务</string>
    <string name="entrance_6">中医体检</string>
    <string name="entrance_7">未治病服务</string>
    <string name="entrance_8">中医养生</string>
    <string name="doctor_name">专家姓名</string>
    <string name="hospital_center">中心院区</string>
    <string name="hospital_north">北院区</string>
    <string name="hospital_south">南院区</string>
    <string name="register_ok">确认预约</string>
    <string name="register_succ">预约成功</string>
    <string name="register_keshi">预约科室</string>
    <string name="keshi_pos">科室位置</string>
    <string name="register_doc">预约专家</string>
    <string name="see_doctor_date">就诊日期</string>
    <string name="register_fee">预约费</string>
    <string name="patient_manage">就诊人管理</string>
    <string name="patient">就诊人</string>
    <string name="sure_submit">确认提交</string>
    <string name="person_name">姓名</string>
    <string name="hint_person_name">请输入真实姓名</string>
    <string name="person_ID">身份证</string>
    <string name="hint_person_ID">请输入15/18位身份证号</string>
    <string name="medic_ID">就诊卡号</string>
    <string name="hint_medic_ID">请输入医院蓝色就诊卡卡号</string>
    <string name="phone_num">手机号</string>
    <string name="hint_phone_num">请输入有效手机号</string>
    <string name="change">更改</string>
    <string name="hospital_info_detail">\t伴随着时代发展的快捷脚步，沐浴着开拓创新的强劲东风，辽宁中医药大学附属医院暨辽宁省中医医院自1956年建院，凭借半个多世纪的发展建设和中医药传统文化的积淀，现已成为东北地区一所集医疗、科研、教学、康复、保健于一体的大型综合性三级甲等中医院。医院是首批全国百姓放心示范中医院，全国“文明单位”，省“文明标兵”，国家中医临床研究基地，国家中医药标准研究推广基地，国家食品药品监督管理局临床药理基地，首批国家中医药管理局“治未病”预防保健服务试点单位，辽宁省中医住院医师规范化培训基地。
    医院现已形成一院三区的办院模式，即医院主院区——建筑面积8.7万㎡，开放床位1500张；慢病康复院区——建筑面积4.2万㎡，开放床位700张；沈本医院院区——建筑面积2.0万㎡，开放床位300张。在上级各部门领导的支持与关怀下，医院充分发挥自身独特的医疗资源优势，立足沈阳、辐射全省，经过几代辽宁中医人的努力拼搏与不懈奋斗，医院以恢宏磅礴的气势、锐意进取的精神，铸就了灿烂辉煌、硕果累累的今天。2010年至今，总收入增长达60%，两个效益在高起点上始终保持稳步提升。
    医院高度重视人才队伍建设，夯实可持续发展根基。现有职工总数2452人，高级职称人员482人，中级职称人员527人，硕士以上学历582人（其中博士学历98人），博士生导师62人，硕士生导师253人；现有博士后流动站2个；一级博士学位授权学科2个；博士学位授权点5个；硕士学位授权点9个，覆盖临床全部二级学科；国医大师1名、国家级名医 14名、省级名医 41名、市级名医13人、享受国务院政府津贴 15名、国家中医药管理局优秀中医临床研修人才24 名、“百千万人才工程”国家级人选2人、“百千万人才工程”省级百人层次16人，千人层次21人，万人层次2人。
    医院重点专科、学科建设成就卓著。医院设有临床科室55个，一级科室23个，二级科室16个，医辅科室10个，药剂科室4个。医院目前现有卫生部临床重点专科6个，“十一五”国家中医药管理局重点专科6个，“十一五”国家中医药管理局重点学科5个，“十二五”国家中医药管理局重点专科5个，“十二五”国家中医药管理局重点学科9个，1个国家中医药管理局中医、中西医结合急诊建设基地。2012年，在“全国名老中医药专家传承工作室建设项目”中，成立6个名中医工作室。2013年，医院辽宁彭氏眼针学术流派传承工作室成功入选第一批全国中医学术流派传承工作室建设单位。
    医院确定“科技兴院”战略，全面提高科研水平。2008年12月30日，国家中医临床研究基地建设项目花落医院，标志着医院进入了中医科研的国家队。2013年，国家中医临床研究基地业务建设第一阶段完美收官，医院以优异成绩圆满完成了建设任务，向国家和人民交上了一份满意答卷。
    医院有国家局级重点研究室2个，国家局三级实验室3个、二级实验室5个。近五年，立项课题219项，科研经费总计5000万，荣获省级科技进步奖16项，一等奖5项。2013年，医院医学伦理委员会顺利通过了FERCAP-SIDCER（亚太地区伦理委员会）认证，成为东北地区首家通过认证的医院。同时，医院获颁世界中医药学会联合会伦理审查委员会——中医药临床研究伦理审查平台评估牌匾及证书。这些标志着医院已加入到国际伦理审查研究体系中，进一步提高了伦理审查能力和水平。2013年，医院正式获得中国合格评定国家认可委员会（CNAS）颁发的“医学实验室质量和能力认可”（即ISO15189实验室认可）证书，成为省内第二家获此认证的临床医疗机构，这标志着医院已具备了国际标准的质量管理和检验技术。
    医院一直把以高新技术为支撑，以临床研究基地建设为平台，打造具有中医特色和本色的国家标志性中医院作为总体战略目标，提高应诊能力，扩大服务半径，做到西医有水平，中医有特色。医院将中医药传统疗法与北方地域特点相融合，充分发挥中医药特色和疗效，造福一方百姓。如：中药外敷、竹罐疗法、中药足浴、灸法、刮痧等中医诊疗技术项目近百项。具有中医特色的儿科伏九贴敷、风湿科春（秋）分免疫贴敷、呼吸科足底贴敷等疗法深受患者欢迎，取得了很好的社会效益和经济效益。医院注重挖掘整理院内名老中医及临床各科室的经验方剂，开发院内制剂，形成医院特色，现院内制剂品种已达百余种。可以说，永葆本色、彰显特色，是医院发展的不竭动力，在继承、发扬和完善传统特色疗法的同时，医院积极开展新技术、新疗法，极大地提升了诊疗水平。
    医院注重创新宣传模式，使“国医”走进百姓家。利用辽宁电视台《有话您说》栏目，沈阳电视台《北方名医》、《沈视早早报》“养养精、气、神”栏目，《健康报》、《沈阳晚报》、《辽沈晚报》、《华商晨报》等多家报刊上进行中医药科普知识宣传。与东北新闻网合作，建立了“辽宁省中医药文化知识普及专栏”，为百姓寻医问药提供便捷服务。院内《辽宁中医》月刊也是宣传中医药知识和凝聚医院文化的主要载体。
    作为辽宁中医药大学第一临床学院，医院承担着本科生、硕士生、博士生等不同层次的临床授课和后期临床教学任务，年均承担15000学时，参与授课临床教师150余人。同时，每年高质量开展各级继续医学教育项目三十余项，培养了一批又一批中医药人才。“临床技能综合培训中心”获批2013年国家教育部大学生校外实践教育基地及2012年辽宁省大学生实践教育基地。“中医专业临床技能实训中心”获批辽宁省实验教学示范中心。
    医院先后与世界30多个国家和地区建立友好联系，接收了大批国外研修生，并派出多名专家赴美国、韩国、日本、俄罗斯、泰国、新加坡、马来西亚、澳大利亚等国家和地区的中医院校讲学，开设中医专家门诊，为中医服务全人类做出积极贡献。</string>
    <string name="specialist">专科专家</string>
    <string name="medic_guide">就医导航</string>
    <string name="outpatient_guide">门诊指南</string>
    <string name="see_doctor_process">就诊流程</string>
    <string name="inside_map">院内导航</string>
    <string name="to_hospital_map">来院路线</string>
    <string name="hospital_addr">医院地址：沈阳市皇姑区北陵大街33号</string>
    <string name="e_prescription">电子处方</string>
    <string name="check_report">检查报告</string>
    <string name="inspection_report">检验报告</string>
    <string name="my_verify">身份验证</string>
    <string name="my_medic_history">就诊记录</string>
    <string name="my_doctors">我的医生</string>
    <string name="my_medic_records">病历查询</string>
    <string name="my_check_report">检验报告</string>
    <string name="my_pic_record">影像报告</string>
    <string name="out_medic_record">门诊病历</string>
    <string name="stay_medic_record">住院病历</string>
    <string name="about_us">关于我们</string>
    <string name="version_check">版本检查</string>
    <string name="pic_record_ct">CT报告</string>
    <string name="pic_record_x">X光报告</string>
    <string name="pic_record_b">B超报告</string>
    <string name="recode_choose">报告选择</string>
    <string name="medic_plaster">帖敷</string>
    <string name="china_prescirption">处方中药</string>
    <string name="for_boil">中药煎煮</string>
    <string name="preparation">中药制剂</string>
    <string name="china_patent_medicine">中成药</string>
    <string name="spring_plaster">春分帖敷</string>
    <string name="summer_plaster">三伏帖敷</string>
    <string name="autumn_plaster">金秋帖敷</string>
    <string name="winter_plaster">三九帖敷</string>
    <string name="x_choose">%s选择</string>
    <string name="reserve_detail">预约详情</string>
    <string name="reserve_time">预约时间</string>
    <string name="serve_count">服务次数</string>
    <string name="medic_fee">医药费用</string>
    <string name="deliver_fee">配送费用</string>
    <string name="prescrip_doc">处方医生</string>
    <string name="total_fee">合计</string>
    <string name="pay_info">支付信息</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_ok">确认支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="weixinpay">微信支付</string>
    <string name="unionpay">银联支付</string>
    <string name="parser_error_msg">抱歉，服务暂时抛锚了，正在奋力解决！</string>
    <string name="network_error">网络开小差，稍后再试</string>
    <string name="network_error_info">如果网络正常，建议稍后片刻再试</string>
	<string name="network_need_login">数据加载异常，请检查网络后点击重试！</string>
    <string name="title_network_error">网络错误</string>
    <string name="download_failed_retry">下载失败，请重试。</string>
    <string name="application_not_install">该应用未安装</string>
    <string name="application_crash_quit">很抱歉，程序出现异常，即将退出。</string>
    <string name="loading">努力加载中...</string>
    <string name="share">分享</string>
	<string name="sending">发送中</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_retry">重试</string>
    <string name="btn_exit">退出</string>
    <string name="btn_submit">提交</string>
    <string name="btn_ok">确定</string>
    <string name="btn_upgrade">更新</string>
    <string name="btn_download">下载</string>
    <string name="btn_downloading">下载中</string>
    <string name="btn_install">安装</string>
    <string name="btn_installing">安装中</string>
    <string name="btn_open">打开</string>
	<string name="btn_later">下次再说</string>
    <string name="btn_copy">复制</string>
    <string name="btn_building">打包中</string>
    <string name="btn_build_failed">构建失败</string>
    <string name="btn_build_new_version">打最新包</string>
	<string name="caption_new_version">RDM客户端有最新版本，是否更新？</string>
	<string name="weixin_circle">朋友圈</string>
	<string name="weixin_someone">微信好友</string>
	<string name="share_title">分享给朋友</string>
	<string name="no_support_weixin">手机未安装最新版本微信</string>
	<string name="install_newest_weixin">是否前往安装最新版本的微信?</string>
	<string name="install_weixin_yes">立即安装</string>
	<string name="share_succ_title">分享成功！</string>
	<string name="share_fail_title">分享失败！</string>
	<string name="share_fail_net">由于网络原因，您此次未成功分享</string>
	<string name="share_auth_denied">由于权限不足，您此次未成功分享</string>
	<string name="share_user_cancel">您取消了此次分享</string>
	<string name="wx_share_thumb_fail">分享缩略图生成失败</string>
	<string name="share_loading">分享</string>
    <string name="initializing_content">正在生成分享信息, 请稍后&#8230;</string>
    <string name="permission_title">授权提示</string>
	<string name="permission_hint_barcode">是否允许聚乐薄打开摄像头？</string>
	<string name="permission_hint_call">是否允许聚乐薄使用拨号功能？</string>
	<string name="phone_app_not_found">未找到拨号程序</string>
	<string name="permission_agree">同意</string>
	<string name="permission_disagree">拒绝</string>
    <string name="register_login">登录／注册</string>
    <string name="register">注册</string>
    <string name="user_register">用户注册</string>
    <string name="forget_passwd">忘记密码</string>
	<string name="login">登录</string>
    <string name="quick_login">退出登录</string>
    <string name="login_fail_title">登录失败！</string>
	<string name="login_auth_denied">由于权限不足，您此次登录失败</string>
	<string name="login_fail_net">由于网络原因，您此次登录失败</string>
	<string name="login_user_cancel">您取消了此次登录！</string>
	<string name="send">发送</string>
	<string name="please_input_username">请输入用户名</string>
	<string name="please_input_verifycode">请输入验证码</string>
	<string name="pswd_not_empty">密码不能为空</string>
    <string name="get_help_1">无法获取验证码，请联系管理员获取</string>
    <string name="get_help_2">帮助</string>
    <string name="get_help_3">。</string>
    <string name="login_help_1">无法获取验证码？</string>
    <string name="login_help_2">请按以下顺序解决：</string>
    <string name="login_help_3">1.登录HR系统，查看手机号码是否正确，验证短信会发送到HR系统登录手机号码。</string>
    <string name="login_help_4">2.若手机号为空或不正确，请邮件人力资源同事协助修改，修改好，第二天可正常接收验证码。</string>
    <string name="login_help_5">3.若以上方法都不能解决问题，请咚咚联系：周子雄 或邮件：</string>
    <string name="login_support_email">zhouzixiong@jd.com</string>
    <string name="login_email_subject">RDM(安卓)登录有问题</string>
    <string name="username">账号</string>
    <string name="hint_username">手机号／身份证号</string>
    <string name="reset_password">修改密码</string>
    <string name="password">密码</string>
    <string name="re_password">重输密码</string>
    <string name="password_need_same">两次密码必须一致</string>
    <string name="hint_password">密码必须6-20个字符，只能含有字母/数字/下划线</string>
    <string name="verify_code_get">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="verify_code_resend_x">重新获取(%s)</string>
    <string name="product_list">产品列表</string>
	<string name="product_detail">体验详情</string>
	<string name="product_version_list">历史版本</string>
	<string name="inner_test">内测体验</string>
	<string name="user_feedback">用户反馈</string>
	<string name="my_rdm">我的RDM</string>
	<string name="product_intro">产品说明：</string>
    <string name="version_title">体验标题：</string>
	<string name="product_feature">版本特性：</string>
    <string name="detail_client_x">%s客户端</string>
    <string name="detail_download_notice">二维码仅限公司内部员工使用，请勿外传！</string>
    <string name="detail_download_link">下载链接</string>
	<string name="feed_back">反馈</string>
	<string name="feed_back_type">意见反馈</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="feed_back_type_1">系统问题</string>
    <string name="feed_back_type_2">优化建议</string>
    <string name="feed_back_type_3">其它</string>
    <string name="feed_back_content">内容</string>
    <string name="feed_back_content_hint">评价描述</string>
    <string name="feed_back_other">其它</string>
	<string name="feedback_reply_to_x">回复%s：</string>
	<string name="feedback_today_num_x">今日反馈：%s条</string>
	<string name="upload_photo">上传照片</string>
	<string name="choose_img_from_album">从相册中选择</string>
	<string name="take_photo">拍照</string>
</resources>