<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_FAFAFA">

    <com.xingye.netzoo.xylib.utils.ui.NaviBar
        android:layout_alignParentTop="true"
        android:id="@+id/report_query_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:bgcolor="#5E4D3F"
        tools:titleText="@string/entrance_2"/>

    <RadioGroup
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/report_group"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="@drawable/button_brown_frame"
        android:orientation="horizontal">

        <RadioButton
            android:background="@drawable/round_tab_left_state"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/e_prescription"
            android:text="@string/e_prescription"
            android:textColor="@drawable/hospital_text_color_state"/>
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/check_report"
            android:text="@string/check_report"
            android:textColor="@drawable/hospital_text_color_state"
            android:background="@drawable/round_tab_mid_state"/>
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/inspection_report"
            android:text="@string/inspection_report"
            android:textColor="@drawable/hospital_text_color_state"
            android:background="@drawable/round_tab_right_state" />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c_C8C7CC"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/report_list"/>
</LinearLayout>