<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <com.xingye.netzoo.xylib.utils.ui.NaviBar
        android:layout_alignParentTop="true"
        android:id="@+id/register_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:bgcolor="#5E4D3F"
        tools:titleText="@string/entrance_0"/>

    <RelativeLayout
        android:id="@+id/top_part" 
        android:layout_below="@+id/register_nav"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <EditText
            android:layout_alignParentLeft="true"
            android:drawablePadding="2dp"
            android:drawableLeft="@mipmap/icon_search"
            android:imeOptions="actionSearch"
            android:paddingLeft="8dp"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:background="#E9E9E9"
            android:hint="@string/doctor_name"
            android:textColorHint="#7A797B"
            android:textSize="14dp"/>
        <TextView
            android:id="@+id/register_date"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2017-10-20"
            android:textSize="14dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/icon_calendar"/>
    </RelativeLayout>

    <RadioGroup
        android:layout_centerHorizontal="true"
        android:id="@+id/hospital_group"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/top_part"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="@drawable/button_brown_frame"
        android:orientation="horizontal">

        <RadioButton
            android:background="@drawable/round_tab_left_state"
            android:button="@null"
            android:gravity="center"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:id="@+id/hospital_mid"
            android:text="@string/hospital_center"
            android:textColor="@drawable/hospital_text_color_state"/>
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:id="@+id/hospital_north"
            android:text="@string/hospital_north"
            android:textColor="@drawable/hospital_text_color_state"
            android:background="@drawable/round_tab_mid_state"/>
        <RadioButton
            android:button="@null"
            android:gravity="center"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:id="@+id/hospital_south"
            android:text="@string/hospital_south"
            android:textColor="@drawable/hospital_text_color_state"
            android:background="@drawable/round_tab_right_state" />
    </RadioGroup>
    <ListView
        android:divider="@null"
        android:layout_width="165dp"
        android:layout_height="match_parent"
        android:layout_below="@id/hospital_group"
        android:background="@color/c_F2EBD8"
        android:id="@+id/main_list"/>
    <ListView
        android:layout_toRightOf="@id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hospital_group"
        android:id="@+id/sub_list"
        android:background="@color/c_FFFFFF"/>

    <com.xingye.netzoo.xylib.utils.ui.DateTimePickerView
        tools:endYear="2018"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/date_picker"/>
</RelativeLayout>