<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_FAFAFA"
    android:orientation="vertical">

    <com.xingye.netzoo.xylib.utils.ui.NaviBar
        android:id="@+id/login_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:bgcolor="#5E4D3F"
        tools:titleText="@string/login"/>
    <include layout="@layout/key_edit_item"
        android:layout_marginTop = "20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/login_name"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c_C8C7CC"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_FFFFFF">
    <ImageView
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwd_visiable"
        android:src="@mipmap/icon_calendar"/>
    <include layout="@layout/key_edit_item"
        android:layout_toLeftOf="@id/passwd_visiable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/login_password"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c_C8C7CC"/>


    <TextView
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_brown"
        android:layout_gravity="center_horizontal"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:id="@+id/submit_btn"
        android:text="@string/login"
        android:textColor="@drawable/hospital_text_color_state"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/c_474747"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_register"
            android:text="@string/user_register"/>
        <TextView
            android:textColor="@color/c_474747"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/forget_passwd"
            android:text="@string/forget_passwd"/>
    </LinearLayout>
</LinearLayout>