<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_FAFAFA"
    android:orientation="vertical">

    <com.xingye.netzoo.xylib.utils.ui.NaviBar
        android:id="@+id/reserve_pay_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:bgcolor="#5E4D3F"
        tools:titleText="@string/reserve_detail"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/pre_title_imgv"
                    android:src="@mipmap/icon_money"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/title_v"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/pre_title_imgv"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="#474747"
                    android:text="@string/pay_info" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_C8C7CC"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/content_layout"/>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <TextView
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/icon_payway"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="#474747"
                    android:text="@string/pay_way"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_C8C7CC"/>

            <include layout="@layout/icon_key_check_item"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:id="@+id/alipay_layout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_C8C7CC"/>
            <include layout="@layout/icon_key_check_item"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:id="@+id/wxpay_layout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_C8C7CC"/>
            <include layout="@layout/icon_key_check_item"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:id="@+id/unionpay_layout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_C8C7CC"/>


            <TextView
                android:layout_marginTop="40dp"
                android:background="@drawable/button_brown"
                android:layout_gravity="center_horizontal"
                android:layout_width="335dp"
                android:layout_height="57dp"
                android:gravity="center"
                android:id="@+id/pay_btn"
                android:text="@string/pay_ok"
                android:textColor="@drawable/hospital_text_color_state"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
